onflow-2020-10-14/v0.3/Node Operator Guides/setting-up-a-node.md
---
title: "Setting Up a Node"
slug: "setting-up-a-node"
excerpt: "Get stared running a Flow node"
hidden: true
createdAt: "2020-04-03T21:27:27.379Z"
updatedAt: "2020-06-02T02:02:02.332Z"
---
[block:api-header]
{
  "title": "Setup your Node Hardware"
}
[/block]
First you'll need to provision a machine or virtual machine to run your node software. 

## Hardware Requirements
The hardware your Node will need varies depending on the role your Node will play in the Flow network. For an overview of the differences see the [Node Roles Overview](doc:node-roles).
[block:callout]
{
  "type": "warning",
  "title": "Best Guesstimates Ahead!",
  "body": "The initial node hardware requirements were a high estimate derived from the theoretical demands by the protocol running at full steam. As we optimize, the early network will likely start with much more modest requirements and gradually scale up over time. The numbers below represent our current best estimate for the state of the network.\n\nThese will be actively updated as we continue benchmarking the network's performance."
}
[/block]

[block:parameters]
{
  "data": {
    "h-0": "Node Type",
    "h-1": "CPU",
    "h-2": "Memory",
    "h-3": "Disk",
    "h-4": "Disk",
    "0-0": "Collector",
    "1-0": "Consensus",
    "2-0": "Execution",
    "3-0": "Verification",
    "4-0": "Access",
    "0-1": "2 core",
    "0-3": "200 GiB",
    "1-1": "2 cores",
    "2-1": "4 cores",
    "3-1": "2 cores",
    "4-1": "2 cores",
    "2-3": "5 TiB",
    "3-3": "100 GiB",
    "4-3": "200 GiB",
    "1-3": "100 GiB",
    "1-2": "4 GiB",
    "0-2": "2 GiB",
    "3-2": "2 GiB",
    "4-2": "2 GiB",
    "2-2": "8 GiB"
  },
  "cols": 4,
  "rows": 5
}
[/block]
## Networking Requirements
Most of the load on your nodes will be messages sent back and forth between other nodes on the network. Make sure you have a sufficiently fast connection, we recommend at _least_ 1Gbps, and 5Gbps is better.

Each node will require either a static IPv4 address or a fixed DNS name. Either works, and we'll refer to this more generally as your Node Address from here out.
[block:callout]
{
  "type": "info",
  "body": "Your Node Address must be a publicly routable IPv4 address or valid DNS name that points to your node. This is how other nodes in the network will communicate with you.",
  "title": "Node Address Requirements"
}
[/block]
Your firewalls must expose TCP/3569 for Node communication. If you run an Access Node, you must also expose the configurable GRPC.

If you are running an Access Node, you need to be able to communicate with both a Collection Node and an Execution Node. These are what the Access Node will use to execute scripts and submit transactions, as it can't participate in the protocol itself. By default these are exposed on port 9000, but neither Collection nor Execution are required to provide these interfaces, so if you want to run an Access Node you need to talk with other Nodes you know will be available.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/d28c155-Flow-architecture_1.png",
        "Flow-architecture (1).png",
        1460,
        721,
        "#e8edf5"
      ],
      "caption": "Example Topology for an exhaustive hosting setup"
    }
  ]
}
[/block]
## Operating System Requirements
The Flow node code is distributed as a Linux container image, so your node must be running an OS with a container runtime like [docker](https://docker.com) or [containerd](https://containerd.io). 

The bootstrapping scrips we'll use later are compiled binaries targeting an `amd64` architecture, so your system must be 64 bit.  Some of the scripts also bash based and a shell interpreter that is bash compatible will also be needed.

Flow also provides `systemd` service and unit files as a template for installation, though `systemd` is not required to run Flow.
[block:callout]
{
  "type": "info",
  "title": "Choose Your Own Adventure",
  "body": "Flow is distributed in such a way that makes it very system agnostic. You are free to build your own orchestration around how you run your nodes and manage your keys.\n\nFor the remainder of this guide, we cover the most simple case, a single node being hand deployed. This should give you a good sense of what's needed, and you can modify to suit your needs from there.\n\nThe Flow team has tested running nodes on Ubuntu 18.04 and GCP's Container Optimized OS which is based on Chromium OS. If you an unsure where to start, those are good choices."
}
[/block]

[block:api-header]
{
  "title": "Setup Data Directories & Disks"
}
[/block]
Flow stores protocol state on disk, as well as execution state in the case of execution nodes.

Where the data is stored is up to you. By default the systemd files that ship with flow use `/var/flow/data`. This is where the vast majority of Flow's disk usage comes from, so you may wish to make this directory mounted to a separate disk from the OS. The performance of this disk IO is also a major bottleneck for certain node types. While all nodes need to make use of this disk, if you are running an execution node, you should make sure this is a high performing SSD.

As a rough benchmark for planning storage capacity, each flow block will grow the data directory by 3-5KiB.
[block:api-header]
{
  "title": "Pull the Flow Images"
}
[/block]
The `flow-go` binaries are distributed as container images, and need to be pulled down to your host with your image management tool of choice.

Replace `$ROLE` with the node type you are planning to run. Valid options are:
- collection
- consensus
- execution
- verification
- access
[block:code]
{
  "codes": [
    {
      "code": "# Docker\ndocker pull gcr.io/flow-container-registry/${ROLE}:alpha-v0.0.1\n\n# Containerd\nctr images pull gcr.io/flow-container-registry/${ROLE}:alpha-v0.0.1",
      "language": "shell"
    }
  ]
}
[/block]

[block:api-header]
{
  "title": "Set Your Node to Start"
}
[/block]
Your nodes will need to boot at startup, and come back to life if they crash.

If you are running `systemd` and you can use the service files provided by flow-go. Find them in the [Flow Go](https://github.com/dapperlabs/flow-go/tree/master/deploy)
[block:code]
{
  "codes": [
    {
      "code": "mv ~/flow-${ROLE}.service /etc/systemd/system/.\n\nsystemctl enable flow",
      "language": "shell"
    }
  ]
}
[/block]
If you are using some other system, you need to ensure that the flow container is started, and the appropriate key directories are mounted into the container.

The systemd files pull runtime setting from `/etc/flow/runtime-config.env` and any `.env` files under `/etc/flow/conf.d`. Examples of these files are also available in the github repo, you will need to configured the runtime config file later.